--- a/src/guiLayer/.gitignore
+++ b/src/guiLayer/.gitignore
@@ -2,3 +2,7 @@
 /MainMenuGUI.class
 /OrderMenuGUI$1.class
 /OrderMenuGUI.class
+/OrderPanel.class
+/OrderMenuGUI$2.class
+/OrderPanel$1.class
+/OrderTableRenderer.class
