--- a/src/guiLayer/.gitignore
+++ b/src/guiLayer/.gitignore
@@ -6,3 +6,9 @@
 /OrderMenuGUI$2.class
 /OrderPanel$1.class
 /OrderTableRenderer.class
+/OrderMenuGUI$3.class
+/OrderMenuGUI$4.class
+/OrderMenuGUI$5.class
+/OrderMenuGUI$6.class
+/OrderMenuGUI$7.class
+/RoundedButton.class
