Creensize update + CreateOrderPanel buttonupdate :heart:
Now the screen automatically detects your screen size and opens as full screen
CreateOrderPanel SearchCustomer searchfield now working
CreateOrderPanel documentlistener added
CreateOrderPanel label added in purpose so we can remove the added customer (not implemented, just simple label)

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/guiLayer/CreateOrderPanel.java=UTF-8
 encoding//src/guiLayer/OrderMenuGUI.java=UTF-8
 encoding//src/guiLayer/OrderPanel.java=UTF-8
