--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/guiLayer/CreateOrderPanel.java=UTF-8
 encoding//src/guiLayer/OrderMenuGUI.java=UTF-8
 encoding//src/guiLayer/OrderPanel.java=UTF-8
+encoding//src/guiLayer/ProductsPanel.java=UTF-8
