--- a/src/guiLayer/.gitignore
+++ b/src/guiLayer/.gitignore
@@ -21,3 +21,10 @@
 /CustomersPanel.class
 /ProductsPanel.class
 /CreateOrderPanel$1.class
+/CreateOrderPanel$7.class
+/CreateOrderPanel$4.class
+/CreateOrderPanel$5.class
+/CreateOrderPanel$6.class
+/CreateOrderPanel$8.class
+/CreateOrderPanel$9.class
+/CreateOrderPanel$10.class
