--- a/src/guiLayer/.gitignore
+++ b/src/guiLayer/.gitignore
@@ -28,3 +28,10 @@
 /CreateOrderPanel$8.class
 /CreateOrderPanel$9.class
 /CreateOrderPanel$10.class
+/addProductsDialog.class
+/addProductsDialog$1$1.class
+/addProductsDialog$1.class
+/addProductsDialog$2.class
+/AddProductsDialog$1.class
+/AddProductsDialog$2.class
+/AddProductsDialog.class
