Changes to AddProductsDialog
Started making the table
Finished the searchBar

--- a/src/guiLayer/.gitignore
+++ b/src/guiLayer/.gitignore
@@ -35,3 +35,8 @@
 /AddProductsDialog$1.class
 /AddProductsDialog$2.class
 /AddProductsDialog.class
+/AddProductsDialog$3.class
+/AddProductsDialog$4.class
+/AddProductsDialog$5.class
+/AddProductsDialog$6.class
+/AddProductsDialog$7.class
