--- a/src/guiLayer/.gitignore
+++ b/src/guiLayer/.gitignore
@@ -40,3 +40,8 @@
 /AddProductsDialog$5.class
 /AddProductsDialog$6.class
 /AddProductsDialog$7.class
+/CreateCustomerDialog$1.class
+/CreateCustomerDialog$2.class
+/CreateCustomerDialog$3.class
+/CreateCustomerDialog.class
+/AddProductsDialog$8.class
