AddProducts Table Update
Updated the addProductsTable to display the right information

new constructor in the JTableButtonMouseListener to support JDialogs (popups) in the button clicks so they have different click events

Co-Authored-By: TMSKH <71212192+TMSKH@users.noreply.github.com>

--- a/src/guiLayer/.gitignore
+++ b/src/guiLayer/.gitignore
@@ -45,3 +45,5 @@
 /CreateCustomerDialog$3.class
 /CreateCustomerDialog.class
 /AddProductsDialog$8.class
+/AddProductsDialog$9.class
+/AddProductsDialog$10.class
