Made JDialogs Modal
Only 1 dialog can be opened at a time

Added index out of bounds exception check in mouse moved JTableButtonMouseListener

Co-Authored-By: TMSKH <71212192+TMSKH@users.noreply.github.com>

--- a/src/guiLayer/.gitignore
+++ b/src/guiLayer/.gitignore
@@ -47,3 +47,44 @@
 /AddProductsDialog$8.class
 /AddProductsDialog$9.class
 /AddProductsDialog$10.class
+/CreateOrderPanel$11.class
+/CreateCustomerDialog$4.class
+/CreateOrderPanel$2.class
+/CreateOrderPanel$3.class
+/CreateProductDialog$1.class
+/CreateProductDialog$2.class
+/CreateProductDialog$3.class
+/CreateProductDialog$4.class
+/CreateProductDialog$5.class
+/CreateProductDialog$6.class
+/CreateProductDialog.class
+/CustomersPanel$1.class
+/CustomersPanel$2.class
+/CustomersPanel$3.class
+/CustomersPanel$4.class
+/CustomersPanel$5.class
+/CustomersPanel$6.class
+/CustomersPanel$7.class
+/CustomersPanel$8.class
+/EditCustomerDialog$1.class
+/EditCustomerDialog$2.class
+/EditCustomerDialog$3.class
+/EditCustomerDialog$4.class
+/EditCustomerDialog$5.class
+/EditCustomerDialog.class
+/EditProductDialog$1.class
+/EditProductDialog$2.class
+/EditProductDialog$3.class
+/EditProductDialog$4.class
+/EditProductDialog$5.class
+/EditProductDialog$6.class
+/EditProductDialog$7.class
+/EditProductDialog.class
+/ProductsPanel$1.class
+/ProductsPanel$2.class
+/ProductsPanel$3.class
+/ProductsPanel$4.class
+/ProductsPanel$5.class
+/ProductsPanel$6.class
+/ProductsPanel$7.class
+/ProductsPanel$8.class
